--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "miq_pages"]
-	path = miq_pages
-	url = git://github.com/bcrochet/miq_pages.git
+[submodule "cfme_pages"]
+	path = cfme_pages
+	url = git://github.com/bcrochet/cfme_pages.git
