--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "cfme_pages"]
 	path = cfme_pages
-	url = git://github.com/bcrochet/cfme_pages.git
+	url = git://github.com/RedHatQE/cfme_pages.git
