added tests to tag Infrastructure Mgmt Systems, Hosts and Datastores

--- a/cfme_data.yaml.template
+++ b/cfme_data.yaml.template
@@ -13,6 +13,8 @@ management_systems:
         discovery_range:
             start: 10.0.0.1
             end: 10.0.0.2
+        tags:
+            Provisioning Scope: All
     rhevm31:
         name: RHEV 3.1
         default_name: RHEV-M (10.0.0.3)
@@ -24,6 +26,26 @@ management_systems:
         discovery_range:
             start: 10.0.0.3
             end: 10.0.0.3
+        tags:
+            Provisioning Scope: All
+hosts:
+    vsphere5:
+        name: host_name
+        tags:
+            Provisioning Scope: All
+    rhevm31:
+        name: host_name
+        tags:
+            Provisioning Scope: All
+datastores:
+    vsphere5:
+        name: datastore1
+        tags:
+            Provisioning Scope: All
+    rhevm31:
+        name: iscsi_data
+        tags:
+            Provisioning Scope: All
 group_roles:
     evmgroup-administrator:
         menus:
