Added EC2 support to Management Systems
Specific changes:
- Added EC2System as a new mgmt_system
- Added EC2System support to setup_mgmt_system fixture
- Removed two returns that could never get called
- Added boto to requirements
- Stripped trailing whitespace where needed
- minor PEP8ness where needed
- Changed inconsistent double/single quote usage to be all single

--- a/cfme_data.yaml.template
+++ b/cfme_data.yaml.template
@@ -45,7 +45,22 @@ management_systems:
         tags:
             Provisioning Scope: All
         test_vm_power_control:
-            - vm_name            
+            - vm_name
+    ec2:
+        name: EC2 US East
+        default_name: EC2 US East
+        credentials: aws
+        hostname: ec2.us-east-1.amazonaws.com
+        ipaddress: 207.171.162.181
+        server_zone: default
+        type: ec2
+        clusters:
+            - us-east-1
+        tags:
+            Provisioning Scope: All
+        # EC2 Power Control is currently broken
+        #test_vm_power_control:
+        #    - instance_id_or_name
 pxe:
     pxe_servers:
         rhel:
