--- a/credentials.yaml.template
+++ b/credentials.yaml.template
@@ -8,6 +8,9 @@ rhevm31:
 vsphere5:
     username: admin
     password: password
+aws:
+    username: AKIABCDEFGHIJKL
+    password: secret_access_key
 evmgroup-administrator:
     username: evm-admin
     password: password
