--- a/credentials.yaml.template
+++ b/credentials.yaml.template
@@ -11,6 +11,9 @@ vsphere5:
 aws:
     username: AKIABCDEFGHIJKL
     password: secret_access_key
+bad_credentials:
+    username: bad
+    password: reallybad
 evmgroup-administrator:
     username: evm-admin
     password: password
