--- a/cfme_data.yaml.template
+++ b/cfme_data.yaml.template
@@ -22,6 +22,8 @@ management_systems:
             - iscsi
         tags:
             Provisioning Scope: All
+        policy_profiles:
+            - example policy profile x
         test_vm_power_control:
             - vm_name
     rhevm31:
@@ -44,6 +46,8 @@ management_systems:
             - iscsi
         tags:
             Provisioning Scope: All
+        policy_profiles:
+            - example policy profile y
         test_vm_power_control:
             - vm_name
     ec2:
