Event listener harness  * import and assign policies to send events to automate  * import automate custom namespace to relay events  * bottle api event listener that records events  * test to validate events have made round-trip

--- a/cfme_data.yaml.template
+++ b/cfme_data.yaml.template
@@ -123,6 +123,9 @@ server_roles:
         - smartproxy
         - smartstate
         - user_interface
+listener:
+    url: "http://localhost"
+    port: 8080
 group_roles:
     evmgroup-administrator:
         menus:
