--- a/cfme_data.yaml.template
+++ b/cfme_data.yaml.template
@@ -123,15 +123,23 @@ ldap_server:
     bind_passwd: password
 server_roles:
     default:
+        - automate
+        - ems_metrics_coordinator
+        - ems_metrics_collector
+        - ems_metrics_processor
         - database_operations
         - event
+        - notifier
         - ems_inventory
         - ems_operations
         - reporting
         - scheduler
+        - smartproxy
         - smartstate
         - user_interface
-        - web_services
+listener:
+    url: "http://localhost"
+    port: 8080
 group_roles:
     evmgroup-administrator:
         menus:
