ssh_client fixture, updated/expanded ssh utils
- Needs a change to credentials.yaml, see credentials.yaml.template
- Tests!

--- a/credentials.yaml.template
+++ b/credentials.yaml.template
@@ -11,6 +11,9 @@ vsphere5:
 aws:
     username: AKIABCDEFGHIJKL
     password: secret_access_key
+ssh:
+    username: root
+    password: password
 bad_credentials:
     username: bad
     password: reallybad
