verify roles, renamed to server_roles so it's not confused with other cfme role usage

--- a/cfme_data.yaml.template
+++ b/cfme_data.yaml.template
@@ -107,7 +107,7 @@ ldap_server:
     base_dn: dc=ad,dc=example,dc=com
     bind_dn: administrator@ad.example.com
     bind_passwd: password
-roles:
+server_roles:
     default:
         - automate
         - ems_metrics_coordinator
