added 2 scenario workflows: select cfme server relationship and set template ownership

--- a/credentials.yaml.template
+++ b/credentials.yaml.template
@@ -17,6 +17,9 @@ ssh:
 bad_credentials:
     username: bad
     password: reallybad
+dev_provisioner:
+    username: dev-user
+    password: redhat
 evmgroup-administrator:
     username: evm-admin
     password: password
