--- a/tests/scenarios/refarch_2013_rhev/data/cfme_data.yaml.template
+++ b/tests/scenarios/refarch_2013_rhev/data/cfme_data.yaml.template
@@ -58,6 +58,24 @@ pxe:
     datastores:
         - datastore1
         - datastore2
+provisioning:
+    linux_template_workflow:
+        template: linux_template
+        node: purpose_node
+        child_node: purpose_child_node
+        provision_type: VMware
+        count: 1
+        vm_name: aTestVM
+        vm_description: My Test VM Description
+        host: host.server.name.com
+        datastore: datastore1
+        when_to_provision: 1
+        power_on: True
+        time_until_retirement: 1 Month
+        user:
+            user_owner:
+            group_owner: dev-group
+            credentials: dev_provisioner
 user_groups:
     dev:
         name: dev-group 
