appliance update workflow
small changes + indentation

update according to comments

modified template files

pick appliances from cfme_data added

moved scenario data

--- a/credentials.yaml.template
+++ b/credentials.yaml.template
@@ -1,3 +1,12 @@
+rhsm:
+    username: user
+    password: secret
+sat5:
+    username: user
+    password: secret
+sat6:
+    username: user
+    password: secret
 default:
     username: admin
     password: password
