Added proxy support
typo correct

--- a/credentials.yaml.template
+++ b/credentials.yaml.template
@@ -7,6 +7,9 @@ sat5:
 sat6:
     username: user
     password: secret
+proxy:
+    username:
+    password:
 default:
     username: admin
     password: password
