Event listener testing plugin
This plugin is used for capturing the events triggered by cfme.
It can be integrated very easily, just use the register_event fixture in any testing function.
To use this plugin, firewall must be open for desired port (consult the cli parameters).

By default, the event testing is off.

--- a/cfme_data.yaml.template
+++ b/cfme_data.yaml.template
@@ -137,9 +137,6 @@ server_roles:
         - smartproxy
         - smartstate
         - user_interface
-listener:
-    url: "http://localhost"
-    port: 8080
 group_roles:
     evmgroup-administrator:
         menus:
@@ -494,3 +491,8 @@ clone_retire_setup:
         owner_first_name: testFirst
         owner_last_name: testLast
         owner_email: test@company.com
+event_testing:
+    ip_echo:
+        host: "somehost"
+        port: 8080
+
