Restore cfme_tests root files that were affected by cfme_pages merge

--- a/credentials.yaml.template
+++ b/credentials.yaml.template
@@ -2,3 +2,69 @@ default:
     username: admin
     password: password
     email: admin@example.com
+rhevm31:
+    username: admin
+    password: password
+vsphere5:
+    username: admin
+    password: password
+aws:
+    username: AKIABCDEFGHIJKL
+    password: secret_access_key
+ssh:
+    username: root
+    password: password
+bad_credentials:
+    username: bad
+    password: reallybad
+dev_provisioner:
+    username: dev-user
+    password: redhat
+evmgroup-administrator:
+    username: evm-admin
+    password: password
+    email: admin@example.com
+evmgroup-approver:
+    username: evm-approver
+    password: password
+    email: admin@example.com
+evmgroup-auditor:
+    username: evm-auditor
+    password: password
+    email: admin@example.com
+evmgroup-desktop:
+    username: evm-desktop
+    password: password
+    email: admin@example.com
+evmgroup-operator:
+    username: evm-operator
+    password: password
+    email: admin@example.com
+evmgroup-security:
+    username: evm-security
+    password: password
+    email: admin@example.com
+evmgroup-super_administrator:
+    username: evm-super-admin
+    password: password
+    email: admin@example.com
+evmgroup-support:
+    username: evm-support
+    password: password
+    email: admin@example.com
+evmgroup-user:
+    username: evm-user
+    password: password
+    email: admin@example.com
+evmgroup-user_limited_self_service:
+    username: evm-user-limited-ss
+    password: password
+    email: admin@example.com
+evmgroup-user_self_service:
+    username: evm-user-ss
+    password: password
+    email: admin@example.com
+evmgroup-vm_user:
+    username: evm-vm-user
+    password: password
+    email: admin@example.com
