--- a/conf/credentials.yaml.template
+++ b/conf/credentials.yaml.template
@@ -77,3 +77,6 @@ evmgroup-vm_user:
     username: evm-vm-user
     password: password
     email: admin@example.com
+machine_ftp:
+    username: user
+    password: password
