Implementing some design changes
* No mozwebqa
* Our own selenium functions that
 * wait for ajax before returning contrl
 * locate elements for you before interacting
* Move away from "page object pattern"
 * trying pages as instances of a page (region) class
* login works using this model

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@
 
 PyYAML==3.10
 UnittestZero
-py==1.4.12
-pytest==2.3.4
-pytest-mozwebqa==1.0
+py
+pytest
+#pytest-mozwebqa==1.0
 requests==0.13.3
 selenium
 paramiko
