--- a/credentials.yaml.template
+++ b/credentials.yaml.template
@@ -11,6 +11,9 @@ vsphere5:
 aws:
     username: AKIABCDEFGHIJKL
     password: secret_access_key
+rhos:
+    username: admin
+    password: password
 ssh:
     username: root
     password: password
