Multiple appliance update workflow
fix proxy

--- a/credentials.yaml.template
+++ b/credentials.yaml.template
@@ -1,3 +1,18 @@
+ssh:
+    username: user
+    password: secret
+rhsm:
+    username: user
+    password: secret
+sat5:
+    username: user
+    password: secret
+sat6:
+    username: user
+    password: secret
+proxy:
+    username: user
+    password: secret
 default:
     username: admin
     password: password
