And calling the script right is also a good idea
- In the future, I'll screw around with git hooks on my fork first. :)

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: python
 python:
   - "2.7"
 install: pip install flake8
-script: scripts/flake8-travis.py
+script: python scripts/flake8-travis.py
