Added Host Add page and test
Hosts page class
* Added _configuration_button_locator, _add_new_host_locator, _remove_host_locator to Hosts class
* Added @add_button property, @remove_button property to Hosts class
* Added click_add_new_host() method to Hosts class
* Added does_host_exist() method to Hosts class
* Added check_host_and_refresh() method to Hosts class
* Added click_remove_host() method to Hosts class

Add subpage
* Added new Add page for Hosts subpages

test_infrastructure_provider_pages.py
* Added new test test_host_add() to test_infrastructure_provider_pages.py
* Added new test test_host_delete() to test_infrastructure_provider_pages.py
* Added new single_host_data fixture to test_infrastructure_provider_pages.py

Page base class
* Added _wait_for_invisible_element to Page class

Template data
* Added template data

--- a/cfme_data.yaml.template
+++ b/cfme_data.yaml.template
@@ -81,6 +81,16 @@ management_systems:
         type: openstack
         test_vm_power_control:
             - pwr-ctl-vm-1-dnd
+management_hosts:
+    esx:
+        name: esx-01
+        hostname: esx-01
+        ipaddress: 10.0.0.5
+        ipmi_address: 10.0.1.5
+        mac_address: ff:ee:dd:cc:bb:aa
+        credentials: esx
+        ipmi_credentials: ipmi
+        user_assigned_os: VMware ESX
 pxe:
     pxe_servers:
         rhel:
