--- a/credentials.yaml.template
+++ b/credentials.yaml.template
@@ -14,6 +14,12 @@ aws:
 rhos:
     username: admin
     password: password
+esx:
+    username: admin
+    password: password
+ipmi:
+    username: admin
+    password: password
 ssh:
     username: root
     password: password
