Fixed issues with simple ldap tests
Remove parametrization of roles
Added ldap mode cleanup test_auth_set_to_database()
Created validate_menu() method
Fixed renaming of Configuration -> Configure in root menu in yaml template
Made provider setup only validate when setup has actually recently occured

--- a/cfme_data.yaml.template
+++ b/cfme_data.yaml.template
@@ -182,7 +182,7 @@ group_roles:
                 - Utilization
                 - Planning
                 - Bottlenecks
-            Configuration:
+            Configure:
                 - My Settings
                 - Tasks
                 - SmartProxies
@@ -212,7 +212,7 @@ group_roles:
                 - Explorer
                 - Simulation
                 - Log
-            Configuration:
+            Configure:
                 - My Settings
                 - Tasks
                 - About
@@ -243,7 +243,7 @@ group_roles:
                 - Utilization
                 - Planning
                 - Bottlenecks
-            Configuration:
+            Configure:
                 - My Settings
                 - Tasks
                 - About
@@ -254,7 +254,7 @@ group_roles:
             Services:
                 - Requests
                 - Workloads
-            Configuration:
+            Configure:
                 - My Settings
                 - About
     evmgroup-operator:
@@ -276,7 +276,7 @@ group_roles:
                 - Resource Pools
                 - Datastores
                 - Repositories
-            Configuration:
+            Configure:
                 - My Settings
                 - Tasks
                 - About
@@ -303,7 +303,7 @@ group_roles:
                 - Explorer
                 - Simulation
                 - Log
-            Configuration:
+            Configure:
                 - My Settings
                 - Tasks
                 - About
@@ -347,7 +347,7 @@ group_roles:
                 - Utilization
                 - Planning
                 - Bottlenecks
-            Configuration:
+            Configure:
                 - My Settings
                 - Tasks
                 - Configuration
@@ -376,7 +376,7 @@ group_roles:
                 - Explorer
                 - Simulation
                 - Log
-            Configuration:
+            Configure:
                 - My Settings
                 - Tasks
                 - About
@@ -399,7 +399,7 @@ group_roles:
                 - Resource Pools
                 - Datastores
                 - Repositories
-            Configuration:
+            Configure:
                 - My Settings
                 - Tasks
                 - About
@@ -408,7 +408,7 @@ group_roles:
             Services:
                 - Requests
                 - Workloads
-            Configuration:
+            Configure:
                 - My Settings
                 - About
     evmgroup-user_self_service:
@@ -416,7 +416,7 @@ group_roles:
             Services:
                 - Requests
                 - Workloads
-            Configuration:
+            Configure:
                 - My Settings
                 - About
     evmgroup-vm_user:
@@ -424,7 +424,7 @@ group_roles:
             Services:
                 - Requests
                 - Workloads
-            Configuration:
+            Configure:
                 - My Settings
                 - About
 provisioning:
