--- a/cfme_data.yaml.template
+++ b/cfme_data.yaml.template
@@ -15,6 +15,8 @@ management_systems:
         discovery_range:
             start: 10.0.0.1
             end: 10.0.0.2
+        datacenters:
+            - default
         clusters:
             - iscsi
         hosts:
